--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "framer-motion": "^6.5.1",
+    "gh-pages": "^4.0.0",
     "query": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +57,6 @@
   "devDependencies": {
     "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.25"
-  }
+  },
+  "homepage": "https://dong53358.github.io/netflix-clone"
 }
